--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.1",
     "redux-persist": "^6.0.0",
-    "tailwindcss": "^4.1.5"
+    "tailwindcss": "^4.1.5",
+    "vite-plugin-pwa": "^1.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
